--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
         <h3>in questa sezione verranno esposti tutti progetti realizzati dal mitico Rufus</h3>
         <h6 style="margin-bottom: 20px";>(che sono io)</h6>
 
-        <a href="https://dcsuperherogirlsstreamingita.on.drv.tw/rufus.com/DCSHG.html"> <img  class="dc" src="Image.Videos/DC.png" alt="DC streaming"></a>
-        <h3>Questo e' il mio sito di streaming gratuito e senza pubblicita' di una bellissima serie che vi consiglio</h3>
-        <h3 style="margin-bottom: 50px;">voglio ricordare che non si tratta dello stesso dominio (e' un sito esterno) e che non e' a scopo di lucro</h3>
+        <a href="DCSHG.html"> <img  class="dc" src="Image.Videos/DC.png" alt="DC streaming"></a>
+        <h3 style="margin-bottom: 50px;">Sto attualmente avendo problemi per hosting/copyright quindi abbiate pazienza</h3>
 
         
         <div id="social-icons" class="social-icons">
@@ -44,7 +43,7 @@
             <a href="https://whatsapp.com/channel/0029VaK4Bbc5Ejy2vDnOHU0R"> <img class="logo" src="Rufus logos/Rufus Whatsapp.jpeg" alt="Whatsapp"></a>
             <a href="https://t.me/ltrufus"> <img class="logo" src="Rufus logos/Rufus Telegram.jpeg" alt="Telegram"></a>
             <a href="https://www.instagram.com/lt.rufus/"> <img class="logo" src="Rufus logos/Rufus Instagram Temporaneo.jpeg" alt="Instagram"></a>
-            <a href="https://discord.gg/guACMg6Hk3"> <img class="logo" src="Rufus logos/Rufus Discord.jpeg" alt="Discord"></a>
+            <a href="https://discord.gg/QygjfvxfZ8"> <img class="logo" src="Rufus logos/Rufus Discord.jpeg" alt="Discord"></a>
             <a href="https://steamcommunity.com/id/LtRufus/"> <img class="logo" src="Rufus logos/Rufus Steam.jpeg" alt="Steam"></a>
             <a href="https://twitter.com/lt_rufus_"> <img class="logo" src="Rufus logos/Rufus Twitter.jpeg" alt="Twitter"></a>
             <a href="https://www.tiktok.com/@ltrufus"> <img class="logo" src="Rufus logos/Rufus Twitter.jpeg" alt="TikTok"> </a>
