--- a/rufus.html
+++ b/rufus.html
@@ -15,7 +15,7 @@
         </a>
 
 
-        <h1 style="margin-bottom: 15px;"><a class="b" href="index.html">Pagina principale</a></h1>
+        <h1 style="margin-bottom: 7px;"><a class="b" href="index.html">PAGINA PRINCIPALE</a></h1>
 
         <h1  style="margin-bottom: 10px;">Approfondimenti su mitico Rufus</h1>
         <h3  style="margin-bottom: 5px;">queste sono le mie pfp più comuni che cambio in base al periodo</h3>
@@ -95,7 +95,7 @@
             <a href="https://whatsapp.com/channel/0029VaK4Bbc5Ejy2vDnOHU0R"> <img class="logo" src="Rufus logos/Rufus Whatsapp.jpeg" alt="Whatsapp"></a>
             <a href="https://t.me/ltrufus"> <img class="logo" src="Rufus logos/Rufus Telegram.jpeg" alt="Telegram"></a>
             <a href="https://www.instagram.com/lt.rufus/"> <img class="logo" src="Rufus logos/Rufus Instagram Temporaneo.jpeg" alt="Instagram"></a>
-            <a href="https://discord.gg/guACMg6Hk3"> <img class="logo" src="Rufus logos/Rufus Discord.jpeg" alt="Discord"></a>
+            <a href="https://discord.gg/QygjfvxfZ8"> <img class="logo" src="Rufus logos/Rufus Discord.jpeg" alt="Discord"></a>
             <a href="https://steamcommunity.com/id/LtRufus/"> <img class="logo" src="Rufus logos/Rufus Steam.jpeg" alt="Steam"></a>
             <a href="https://twitter.com/lt_rufus_"> <img class="logo" src="Rufus logos/Rufus Twitter.jpeg" alt="Twitter"></a>
             <a href="https://www.tiktok.com/@ltrufus"> <img class="logo" src="Rufus logos/Rufus Twitter.jpeg" alt="TikTok"> </a>
