--- a/rufus.html
+++ b/rufus.html
@@ -3,7 +3,9 @@
 
 <head>
     <link rel="shortcut icon" type="image/x-icon" href="Rufus logos/Rufus Derpy.jpeg">
-    <title>RUFUS</title>
+    <title>About me</title>
+    <meta name="title" content="Sito web ufficiale di Rufus ufficiale di Rufus">
+    <meta name="description" content="Approfondimenti sul mitico Rufus">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
