--- a/DCSHG.html
+++ b/DCSHG.html
@@ -3,7 +3,9 @@
 
 <head>
     <link rel="shortcut icon" type="image/x-icon" href="Rufus logos/Rufus Derpy.jpeg">
-    <title>RUFUS</title>
+    <title>DCSHG</title>
+    <meta name="title" content="Sito web ufficiale di Rufus ufficiale di Rufus">
+    <meta name="description" content="Pagina dedicata allo streaming di DC Super Hero Girls">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -14,7 +16,7 @@
         <a href="https://discord.com/users/658968248594989058" style="margin-bottom: 30px";>
             <img class="discord-widget" src="https://discord.c99.nl/widget/theme-4/658968248594989058.png" alt="Discord">
         </a>
-    <h1 style="margin-bottom: 7px;"><a class="b" href="index.html">PAGINA PRINCIPALE</a></h1>
+    <h1 style="margin-bottom: 7px;"><a class="b" href="https://ru-fus.github.io/RufusWebsite/index.html">PAGINA PRINCIPALE</a></h1>
 
     <big><h1 style="margin-bottom: 7px;">Sito di Streaming di Rufus</h1></big>
     <h3 style="margin-bottom: 45px;">Non voglio promuovere la pirateria, voglio solo condividere una serie che mi piace senza pubblicita' <br>
@@ -30,36 +32,36 @@
                 
         <br><br>
         <h1>
-        <a class="a" href="DCvideos/S1Ep1.html"> <h6>1x01 - Nuove amicizie - parte 1</h6></a></li> <br>
-        <a class="a" href="DCvideos/S1Ep2.html"> 1x02 - Nuove amicizie - parte 2</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep3.html"> 1x03 - Nuove amicizie - parte 3</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep4.html"> 1x04 - Nuove amicizie - parte 4</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep5.html"> 1x05 - Piccole vittorie </a></li> <br>
-        <a class="a" href="DCvideos/S1Ep6.html"> 1x06 - La rivale di Diana</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep7.html"> 1x07 - L'invasione dei coniglietti</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep8.html"> 1x08 - La Lanterna Viola</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep9.html"> 1x09 - La rivincita di Kara</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep10.html"> 1x10 - La regina degli scherzi</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep11.html"> 1x11 - Bat-mito alla riscossa</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep12.html"> 1x12 - Scontro al museo</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep13.html"> 1x13 - La prima cotta</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep14.html"> 1x14 - Vera magia</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep15.html"> 1x15 - Super Hero Boys - parte 1</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep16.html"> 1x16 - Super Hero Boys - parte 2</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep17.html"> 1x17 - La convention</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep18.html"> 1x18 - Amiche nemiche</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep19.html"> 1x19 - Il litigio - parte 1</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep20.html"> 1x20 - Il litigio - parte 2</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep21.html"> 1x21 - Karen alla riscossa</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep22.html"> 1x22 - Il burrito Bucket</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep23.html"> 1x23 - Il gatto furioso</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep24.html"> 1x24 - Asso contro Krypto</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep25.html"> 1x25 - Anime gemelle - parte 1</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep26.html"> 1x26 - Anime gemelle - parte 2</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep27.html"> 1x27 - I Tween Titans</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep28.html"> 1x28 - Una gemella imperfetta</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep29.html"> 1x29 - Il passato di Zee</a></li> <br>
-        <a class="a" href="DCvideos/S1Ep30.html"> 1x30 - La mitica zia Antiope</a></li> <br>
+            <a class="a" href="S1Ep1.html"> 1x01 - Nuove amicizie - parte 1</a></li> <br>
+            <a class="a" href="S1Ep2.html"> 1x02 - Nuove amicizie - parte 2</a></li> <br>
+            <a class="a" href="S1Ep3.html"> 1x03 - Nuove amicizie - parte 3</a></li> <br>
+            <a class="a" href="S1Ep4.html"> 1x04 - Nuove amicizie - parte 4</a></li> <br>
+            <a class="a" href="S1Ep5.html"> 1x05 - Piccole vittorie </a></li> <br>
+            <a class="a" href="S1Ep6.html"> 1x06 - La rivale di Diana</a></li> <br>
+            <a class="a" href="S1Ep7.html"> 1x07 - L'invasione dei coniglietti</a></li> <br>
+            <a class="a" href="S1Ep8.html"> 1x08 - La Lanterna Viola</a></li> <br>
+            <a class="a" href="S1Ep9.html"> 1x09 - La rivincita di Kara</a></li> <br>
+            <a class="a" href="S1Ep10.html"> 1x10 - La regina degli scherzi</a></li> <br>
+            <a class="a" href="S1Ep11.html"> 1x11 - Bat-mito alla riscossa</a></li> <br>
+            <a class="a" href="S1Ep12.html"> 1x12 - Scontro al museo</a></li> <br>
+            <a class="a" href="S1Ep13.html"> 1x13 - La prima cotta</a></li> <br>
+            <a class="a" href="S1Ep14.html"> 1x14 - Vera magia</a></li> <br>
+            <a class="a" href="S1Ep15.html"> 1x15 - Super Hero Boys - parte 1</a></li> <br>
+            <a class="a" href="S1Ep16.html"> 1x16 - Super Hero Boys - parte 2</a></li> <br>
+            <a class="a" href="S1Ep17.html"> 1x17 - La convention</a></li> <br>
+            <a class="a" href="S1Ep18.html"> 1x18 - Amiche nemiche</a></li> <br>
+            <a class="a" href="S1Ep19.html"> 1x19 - Il litigio - parte 1</a></li> <br>
+            <a class="a" href="S1Ep20.html"> 1x20 - Il litigio - parte 2</a></li> <br>
+            <a class="a" href="S1Ep21.html"> 1x21 - Karen alla riscossa</a></li> <br>
+            <a class="a" href="S1Ep22.html"> 1x22 - Il burrito Bucket</a></li> <br>
+            <a class="a" href="S1Ep23.html"> 1x23 - Il gatto furioso</a></li> <br>
+            <a class="a" href="S1Ep24.html"> 1x24 - Asso contro Krypto</a></li> <br>
+            <a class="a" href="S1Ep25.html"> 1x25 - Anime gemelle - parte 1</a></li> <br>
+            <a class="a" href="S1Ep26.html"> 1x26 - Anime gemelle - parte 2</a></li> <br>
+            <a class="a" href="S1Ep27.html"> 1x27 - I Tween Titans</a></li> <br>
+            <a class="a" href="S1Ep28.html"> 1x28 - Una gemella imperfetta</a></li> <br>
+            <a class="a" href="S1Ep29.html"> 1x29 - Il passato di Zee</a></li> <br>
+            <a class="a" href="S1Ep30.html"> 1x30 - La mitica zia Antiope</a></li> <br>
             <a class="a" href="S1Ep31.html"> 1x31 - La strega del bosco</a></li> <br>
             <a class="a" href="S1Ep32.html"> 1x32 - La piu' grande paura di Zee</a></li> <br>
             <a class="a" href="S1Ep33.html"> 1x33 - Il pinguino imperatore</a></li> <br>
@@ -119,48 +121,10 @@
             <a class="a" href="S2Ep23.html">2x23 - Una serata incantata </a></li> <br>
             <a class="a" href="S2Ep24.html">2x24 - La visita di Acquaman </a></li> <br>
             <a class="a" href="S2Ep25.html">2x25 - Incubo a Gotham - parte 1 </a></li> <br>
-            <a class="a" href="S2Ep26.html">2x26 - Incubo a Gotham - parte 2 </a> </li> </h1>
+            <a class="a" href="S2Ep26.html">2x26 - Incubo a Gotham - parte 2 </a> </li> </h1>   
+        <br> <br> <br> <br> <br> <br>
 
-        <br> <br> <br> 
-
-
-        
-        <div id="social-icons" class="social-icons">
-            <a href="https://www.pinterest.it/ltrufus/"> <img class="logo" src="Rufus logos/Rufus Pinterest.jpeg" alt="Pinterest"> </a>
-            <a href="https://www.youtube.com/channel/UCTibWCGsj4U4lxBC4KPm-Gw"> <img class="logo" src="Rufus logos/Rufus Youtube.jpeg" alt="Youtube"></a>          
-            <a href="https://www.reddit.com/user/S3Npai-Rufus"> <img class="logo" src="Rufus logos/Rufus Reddit.jpeg" alt="Reddit"></a>
-            <a href="https://soundcloud.com/yaufus"> <img class="logo" src="Rufus logos/Rufus Soundcloud.jpeg" alt="Soundcloud"></a>
-            <a href="https://www.wattpad.com/user/LtRufus"> <img class="logo" src="Rufus logos/Rufus Wattpad.jpeg" alt="Wattpad"></a>
-            <a href="https://www.snapchat.com/add/ltrufus"> <img class="logo" src="Rufus logos/Rufus Bianco.jpeg" alt="Snapchat"></a>
-            <a href="https://www.deviantart.com/rufus7734"> <img class="logo" src="Rufus logos/Rufus Deviantart.jpeg" alt="Deviantart"></a>
-            <a href="https://open.spotify.com/user/rufus_akashi"> <img class="logo" src="Rufus logos/Rufus Spotify.jpeg" alt="Spotify"></a>
-            <a href="https://whatsapp.com/channel/0029VaK4Bbc5Ejy2vDnOHU0R"> <img class="logo" src="Rufus logos/Rufus Whatsapp.jpeg" alt="Whatsapp"></a>
-            <a href="https://t.me/ltrufus"> <img class="logo" src="Rufus logos/Rufus Telegram.jpeg" alt="Telegram"></a>
-            <a href="https://www.instagram.com/lt.rufus/"> <img class="logo" src="Rufus logos/Rufus Instagram Temporaneo.jpeg" alt="Instagram"></a>
-            <a href="https://discord.gg/guACMg6Hk3"> <img class="logo" src="Rufus logos/Rufus Discord.jpeg" alt="Discord"></a>
-            <a href="https://steamcommunity.com/id/LtRufus/"> <img class="logo" src="Rufus logos/Rufus Steam.jpeg" alt="Steam"></a>
-            <a href="https://twitter.com/lt_rufus_"> <img class="logo" src="Rufus logos/Rufus Twitter.jpeg" alt="Twitter"></a>
-            <a href="https://www.tiktok.com/@ltrufus"> <img class="logo" src="Rufus logos/Rufus Twitter.jpeg" alt="TikTok"> </a>
-        </div>
-    <h3 style="margin-bottom: 30px;">Di questi uso principalmente Discord e Twitter/X</h3>
-        <h3><h3 style="margin-bottom: 30px";>Nel dubbio questa e' la mia email: <a class="b" href="https://mail.google.com/mail/u/0/#inbox?compose=new">alessiodeleonardis0212@gmail.com</a></h3></h3>
     </ul>
 </body>
-
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        document.querySelector('.scroll-to-social').addEventListener('click', function(e) {
-            e.preventDefault();
-
-            const targetElement = document.getElementById('social-icons');
-            if (targetElement) {
-                window.scrollTo({
-                    top: targetElement.offsetTop,
-                    behavior: 'smooth'
-                });
-            }
-        });
-    });
-</script>
 
 </html>
