--- a/DCvideos/Intro.html
+++ b/DCvideos/Intro.html
@@ -6,18 +6,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="DC.png">
-    <title>S1Ep1</title>
+    <title>Intro</title>
     <meta name="title" content="Sito web ufficiale di Rufus ufficiale di Rufus">
-    <meta name="description" content="Stagione 1 Episodio 1">
+    <meta name="description" content="Opening DCSHG">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-                <a class="b" href="DCSHG.html">Elenco episodi</a>
-                <h1>Nuove amicizie - parte 1</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6685015149147" frameborder="0"
+                <a class="b" href="DCSHG.html"><h2>Elenco episodi</h2></a>
+                <h1>DC Super Hero Girls (2019) - Sigla ITA</h1>
+                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6684961213019" frameborder="0"
                         allowfullscreen></iframe>
-                <h1><a class="a" href="S1Ep2.html">1x02 - Nuove amicizie - parte 2</a></h1>
 </body>
 
 </html>
