--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="it">
-
+<!-- Sito fatto interamente da Rufus. Enjoy <3 -->
 <head>
     <link rel="shortcut icon" type="image/x-icon" href="Rufus logos/Rufus Derpy.jpeg">
     <title>Rufus</title>
@@ -10,7 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
+
 <body>
+
     <ul class="main-list">
         <a href="https://discord.com/users/658968248594989058" style="margin-bottom: 45px";>
             <img class="discord-widget" src="https://discord.c99.nl/widget/theme-4/658968248594989058.png" alt="Discord">
@@ -69,6 +71,8 @@
             }
         });
     });
+
+
 </script>
 
 </html>
