--- a/rufus.html
+++ b/rufus.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="it">
-
+<!-- Sito fatto interamente da Rufus. Enjoy <3 -->
 <head>
     <link rel="shortcut icon" type="image/x-icon" href="Rufus logos/Rufus Derpy.jpeg">
     <title>About me</title>
