--- a/DCvideos/DCSHG.html
+++ b/DCvideos/DCSHG.html
@@ -19,10 +19,13 @@
         </a>
     <h1 style="margin-bottom: 7px;"><a class="b" href="https://ru-fus.github.io/RufusWebsite/index.html">PAGINA PRINCIPALE</a></h1>
 
-    <big><h1 style="margin-bottom: 7px;">Sito di Streaming di Rufus</h1></big>
-    <h3 style="margin-bottom: 100px;">Non voglio promuovere la pirateria, voglio solo condividere una serie che mi piace senza pubblicita' <br>
+    <h1 style="margin-bottom: 7px;">Sito di Streaming di Rufus</h1>
+    <h3 style="margin-bottom: 10px;">Non voglio promuovere la pirateria, voglio solo condividere una serie che mi piace senza pubblicita' <br>
         Questo non e' un sito di streaming generico e non e' a scopo di lucro. <br>
         Per qualsiasi problema contattatemi e cancellero' immediatamente il sito e i suoi contenuti </h3>
+
+        <h3 style="margin-bottom: 100px;"><a class="c" href="DMCA.html">DMCA/REMOVAL - TAKEDOWN - C&D CLICK HERE</a></h3>
+
 
 
 
@@ -32,7 +35,7 @@
         <h1 style="margin-top: 35px; margin-bottom: 35px;">1* Stagione:</h1>
                 
  
-            <h3>
+        <h3>
             <a class="a" href="S1Ep1.html"> 1x01 - Nuove amicizie - parte 1</a></li> <br>
             <a class="a" href="S1Ep2.html"> 1x02 - Nuove amicizie - parte 2</a></li> <br>
             <a class="a" href="S1Ep3.html"> 1x03 - Nuove amicizie - parte 3</a></li> <br>
@@ -85,13 +88,13 @@
             <a class="a" href="S1Ep50.html"> 1x50 - Le acchiappafantasmi</a></li> <br>
             <a class="a" href="S1Ep51.html"> 1x51 - La principessa della fiera - parte 1</a></li> <br>
             <a class="a" href="S1Ep52.html"> 1x52 - La principessa della fiera - parte 2</a></li> 
-            </h3>
+        </h3>
 
 
             <h1 style="margin-top: 35px; margin-bottom: 35px;">2* Stagione:</h1>
         
-            <h3>
-            <a class="a" href="S2Ep1.html">2x01 - La nuova aiutante di Batman - parte 1 </a></li> <br>
+        <h3 style="margin-bottom: 45px;">
+            <a class="a" href="S2Ep1.html">2x01 - La nuova aiutante di Batman - parte 1 </a> <br>
             <a class="a" href="S2Ep2.html">2x02 - La nuova aiutante di Batman - parte 2 </a></li> <br>
             <a class="a" href="S2Ep3.html">2x03 - Una sostituta bizzarra </a></li> <br>
             <a class="a" href="S2Ep4.html">2x04 - Il club di Garth </a></li> <br>
@@ -119,6 +122,12 @@
             <a class="a" href="S2Ep26.html">2x26 - Incubo a Gotham - parte 2 </a> </li> </h1>   
 
         </h3>
+
+        <h1 style="margin-bottom: 9px;">DOWLOADS</h1>
+        <h2 style="margin-bottom: 9px;">Piccola sezione per chiunque volesse scaricare la serie</h2>
+        <h3><a class="a" style="margin-bottom: 3px;" href="https://drive.google.com/file/d/13AJFijWHfoxvs_WtHVTda0LA0vulg3FQ/view?usp=sharing"> STAGIONE 1</a></h3>
+        <h3><a class="a" style="margin-bottom: 50px;" href="https://drive.google.com/file/d/1tJLn9GbEGwOPyJgqDNQ-Nz-lHvaNHBdD/view?usp=drive_link"> STAGIONE 2</a></h3>
+
     </ul>
 </body>
 
