--- a/DCvideos/S1Ep1.html
+++ b/DCvideos/S1Ep1.html
@@ -15,7 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Nuove amicizie - parte 1</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6685015149147" frameborder="0"
+                    <iframe class="flipped-video" width="1200" height="800" src="https://ok.ru/videoembed/6693910743643" frameborder="0"
                         allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep2.html">1x02 - Nuove amicizie - parte 2</a></h1>
 </body>
