--- a/DCvideos/Intro.html
+++ b/DCvideos/Intro.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-                <a class="b" href="DCSHG.html"><h2>Elenco episodi</h2></a>
+                <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>DC Super Hero Girls (2019) - Sigla ITA</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6684961213019" frameborder="0"
+                    <iframe class="flipped-video" width="1200" height="800" src="https://ok.ru/videoembed/6693909367387" frameborder="0"
                         allowfullscreen></iframe>
 </body>
 
