--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <!-- Sito fatto interamente da Rufus. Enjoy <3 -->
 <head>
-    <link rel="shortcut icon" type="image/x-icon" href="Rufus logos/Rufus Derpy.jpeg">
+    <link rel="shortcut icon" type="image/x-icon" href="Rufus logos/Rufus Black.png">
     <title>Rufus</title>
     <meta name="title" content="Sito web ufficiale di Rufus ufficiale di Rufus">
     <meta name="description" content="Pagina Principale">
@@ -36,21 +36,24 @@
 
         
         <div id="social-icons" class="social-icons">
-            <a href="https://www.pinterest.it/ltrufus/"> <img class="logo" src="Rufus logos/Rufus Pinterest.jpeg" alt="Pinterest"> </a>
-            <a href="https://www.youtube.com/channel/UCTibWCGsj4U4lxBC4KPm-Gw"> <img class="logo" src="Rufus logos/Rufus Youtube.jpeg" alt="Youtube"></a>          
-            <a href="https://www.reddit.com/user/S3Npai-Rufus"> <img class="logo" src="Rufus logos/Rufus Reddit.jpeg" alt="Reddit"></a>
-            <a href="https://soundcloud.com/yaufus"> <img class="logo" src="Rufus logos/Rufus Soundcloud.jpeg" alt="Soundcloud"></a>
-            <a href="https://www.wattpad.com/user/LtRufus"> <img class="logo" src="Rufus logos/Rufus Wattpad.jpeg" alt="Wattpad"></a>
-            <a href="https://www.snapchat.com/add/ltrufus"> <img class="logo" src="Rufus logos/Rufus Bianco.jpeg" alt="Snapchat"></a>
-            <a href="https://www.deviantart.com/rufus7734"> <img class="logo" src="Rufus logos/Rufus Deviantart.jpeg" alt="Deviantart"></a>
-            <a href="https://open.spotify.com/user/rufus_akashi"> <img class="logo" src="Rufus logos/Rufus Spotify.jpeg" alt="Spotify"></a>
-            <a href="https://whatsapp.com/channel/0029VaK4Bbc5Ejy2vDnOHU0R"> <img class="logo" src="Rufus logos/Rufus Whatsapp.jpeg" alt="Whatsapp"></a>
-            <a href="https://t.me/ltrufus"> <img class="logo" src="Rufus logos/Rufus Telegram.jpeg" alt="Telegram"></a>
-            <a href="https://www.instagram.com/lt.rufus/"> <img class="logo" src="Rufus logos/Rufus Instagram Temporaneo.jpeg" alt="Instagram"></a>
-            <a href="https://discord.gg/QygjfvxfZ8"> <img class="logo" src="Rufus logos/Rufus Discord.jpeg" alt="Discord"></a>
-            <a href="https://steamcommunity.com/id/LtRufus/"> <img class="logo" src="Rufus logos/Rufus Steam.jpeg" alt="Steam"></a>
-            <a href="https://twitter.com/lt_rufus_"> <img class="logo" src="Rufus logos/Rufus Twitter.jpeg" alt="Twitter"></a>
-            <a href="https://www.tiktok.com/@ltrufus"> <img class="logo" src="Rufus logos/Rufus Twitter.jpeg" alt="TikTok"> </a>
+            <a href="https://www.pinterest.it/ltrufus/"> <img class="logo" src="Rufus logos/Rufus Pinterest.png" alt="Pinterest"> </a>
+            <a href="https://www.youtube.com/channel/UCTibWCGsj4U4lxBC4KPm-Gw"> <img class="logo" src="Rufus logos/Rufus Youtube.png" alt="Youtube"></a>          
+            <a href="https://www.reddit.com/user/S3Npai-Rufus"> <img class="logo" src="Rufus logos/Rufus Reddit.png" alt="Reddit"></a>
+            <a href="https://soundcloud.com/yaufus"> <img class="logo" src="Rufus logos/Rufus Soundcloud-Wattpad.png" alt="Soundcloud"></a>
+            <a href="https://www.wattpad.com/user/LtRufus"> <img class="logo" src="Rufus logos/Rufus Soundcloud-Wattpad.png" alt="Wattpad"></a>
+            <a href="https://www.deviantart.com/rufus7734"> <img class="logo" src="Rufus logos/Rufus Deviantart.png" alt="Deviantart"></a>
+            <a href="https://open.spotify.com/user/rufus_akashi"> <img class="logo" src="Rufus logos/Rufus Spotify.png" alt="Spotify"></a>
+            <a href="https://whatsapp.com/channel/0029VaK4Bbc5Ejy2vDnOHU0R"> <img class="logo" src="Rufus logos/Rufus Whatsapp.png" alt="Whatsapp"></a>
+            <a href="https://t.me/ltrufus"> <img class="logo" src="Rufus logos/Rufus Telegram.png" alt="Telegram"></a>
+            <a href="https://www.instagram.com/lt.rufus/"> <img class="logo" src="Rufus logos/Rufus Instagram.png" alt="Instagram"></a>
+            <a href="https://discord.gg/QygjfvxfZ8"> <img class="logo" src="Rufus logos/Rufus Discord.png" alt="Discord"></a>
+            <a href="https://steamcommunity.com/id/LtRufus/"> <img class="logo" src="Rufus logos/Rufus Steam.png" alt="Steam"></a>
+            <a href="https://twitter.com/lt_rufus_"> <img class="logo" src="Rufus logos/Rufus Twitter.png" alt="Twitter"></a>
+            <a href="https://www.tiktok.com/@ltrufus"> <img class="logo" src="Rufus logos/Rufus Twitter.png" alt="TikTok"></a>
+            <a href="https://github.com/Ru-fus"> <img class="logo" src="Rufus logos/Rufus Twitter.png" alt="GitHub"></a>
+
+
+            
         </div>
     <h3 style="margin-bottom: 30px;">Di questi uso principalmente Discord e Twitter/X</h3>
         <h3><h3 style="margin-bottom: 30px";>Nel dubbio questa e' la mia email: <a class="b" href="https://mail.google.com/mail/u/0/#inbox?compose=new">alessiodeleonardis0212@gmail.com</a></h3></h3>
