--- a/DCvideos/DCSHG.html
+++ b/DCvideos/DCSHG.html
@@ -13,7 +13,6 @@
 
 <body>
 
-    <ul class="main-list">
         <a href="https://discord.com/users/658968248594989058" style="margin-bottom: 30px";>
             <img class="discord-widget" src="https://discord.c99.nl/widget/theme-4/658968248594989058.png" alt="Discord">
         </a>
@@ -129,6 +128,11 @@
         <h3><a class="a" style="margin-bottom: 50px;" href="https://drive.google.com/file/d/1tJLn9GbEGwOPyJgqDNQ-Nz-lHvaNHBdD/view?usp=drive_link"> STAGIONE 2</a></h3>
 
     </ul>
+
+    <video controls width="999">
+        <source src="Hank.mp4" type="video/mp4">
+    </video>
+        <h1>HANK</h1>
 </body>
 
 </html>
