--- a/rufus.html
+++ b/rufus.html
@@ -8,6 +8,13 @@
     <meta name="description" content="Approfondimenti sul mitico Rufus">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        a {
+            display: block;
+            text-align: center;
+            margin-bottom: 45px;
+        }
+    </style>
 </head>
 
 <body>
