--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
     <meta name="description" content="Pagina Principale">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        a {
+            display: block;
+            text-align: center;
+            margin-bottom: 45px;
+        }
+    </style>
 </head>
 
 
 <body>
 
-    <ul class="main-list">
         <a href="https://discord.com/users/658968248594989058" style="margin-bottom: 45px";>
             <img class="discord-widget" src="https://discord.c99.nl/widget/theme-4/658968248594989058.png" alt="Discord">
         </a>
