--- a/DCvideos/DCSHG.html
+++ b/DCvideos/DCSHG.html
@@ -129,9 +129,10 @@
 
     </ul>
 
-    <video controls width="999">
+    <video controls width="80%" max-width="600">
         <source src="Hank.mp4" type="video/mp4">
     </video>
+    
         <h1>HANK</h1>
 </body>
 
