--- a/DCvideos/S1Ep3.html
+++ b/DCvideos/S1Ep3.html
@@ -15,9 +15,9 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Nuove amicizie - parte 3</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/https://ok.ru/video/6693914741339" frameborder="0"
+                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6693914741339" frameborder="0"
                         allowfullscreen></iframe>
-                <h1><a class="a" href="S1Ep2.html">1x02 - Nuove amicizie - parte 2</a></h1>
+                <h1><a class="a" href="S1Ep4.html">1x04 - Nuove amicizie - parte 4</a></h1>
 </body>
 
 </html>
