--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <p>Per qualsiasi domanda contattatemi <3 </p>
     </div>
 
+
     <h1 style="margin-bottom: 5px;">PROGETTI</h1>
     <h3>in questa sezione verranno esposti tutti progetti realizzati dal mitico Rufus</h3>
     <h6>(che sono io)</h6>
@@ -34,14 +35,14 @@
     <a href="DCvideos/DCSHG.html">
         <img class="dc" src="Image.Videos/DC.png" alt="DC streaming">
     </a>
-    <h3 style="margin-bottom: 50px;">Sto attualmente avendo problemi per hosting/copyright quindi abbiate pazienza</h3>
+    <h3 style="margin-bottom: 50px;">A causa del copyright lo streaming è specchiato, tuttavia per chiunque volesse ho lasciato il link per il download di tutta la serie</h3>
 
     <div id="social-icons" class="social-icons">
         <a href="https://www.pinterest.it/ltrufus/"> <img class="logo" src="Rufus logos/Rufus Pinterest.png" alt="Pinterest"> </a>
         <a href="https://www.youtube.com/channel/UCTibWCGsj4U4lxBC4KPm-Gw"> <img class="logo" src="Rufus logos/Rufus Youtube.png" alt="Youtube"></a>          
         <a href="https://www.reddit.com/user/S3Npai-Rufus"> <img class="logo" src="Rufus logos/Rufus Reddit.png" alt="Reddit"></a>
-        <a href="https://soundcloud.com/yaufus"> <img class="logo" src="Rufus logos/Rufus Soundcloud-Wattpad.png" alt="Soundcloud"></a>
-        <a href="https://www.wattpad.com/user/LtRufus"> <img class="logo" src="Rufus logos/Rufus Soundcloud-Wattpad.png" alt="Wattpad"></a>
+        <a href="https://soundcloud.com/yaufus"> <img class="logo" src="Rufus logos/Rufus Soundcloud.png" alt="Soundcloud"></a>
+        <a href="https://www.wattpad.com/user/LtRufus"> <img class="logo" src="Rufus logos/Rufus Wattpad.png" alt="Wattpad"></a>
         <a href="https://www.deviantart.com/rufus7734"> <img class="logo" src="Rufus logos/Rufus Deviantart.png" alt="Deviantart"></a>
         <a href="https://open.spotify.com/user/rufus_akashi"> <img class="logo" src="Rufus logos/Rufus Spotify.png" alt="Spotify"></a>
         <a href="https://whatsapp.com/channel/0029VaK4Bbc5Ejy2vDnOHU0R"> <img class="logo" src="Rufus logos/Rufus Whatsapp.png" alt="Whatsapp"></a>
@@ -49,12 +50,12 @@
         <a href="https://www.instagram.com/lt.rufus/"> <img class="logo" src="Rufus logos/Rufus Instagram.png" alt="Instagram"></a>
         <a href="https://discord.gg/QygjfvxfZ8"> <img class="logo" src="Rufus logos/Rufus Discord.png" alt="Discord"></a>
         <a href="https://steamcommunity.com/id/LtRufus/"> <img class="logo" src="Rufus logos/Rufus Steam.png" alt="Steam"></a>
+        <a href="https://www.tiktok.com/@ltrufus"> <img class="logo" src="Rufus logos/Rufus TikTok.png" alt="TikTok"></a>
         <a href="https://twitter.com/lt_rufus_"> <img class="logo" src="Rufus logos/Rufus Twitter.png" alt="Twitter"></a>
-        <a href="https://www.tiktok.com/@ltrufus"> <img class="logo" src="Rufus logos/Rufus Twitter.png" alt="TikTok"></a>
-        <a href="https://github.com/Ru-fus"> <img class="logo" src="Rufus logos/Rufus Twitter.png" alt="GitHub"></a>
+        <a href="https://github.com/Ru-fus"> <img class="logo" src="Rufus logos/Rufus Github.png" alt="GitHub"></a>
     </div>
 
-    <h3 style="margin-bottom: 30px;">Di questi uso principalmente Discord e Twitter</h3>
+    <h3 style="margin-bottom: 30px; margin-top: 30px;">Di questi uso principalmente Discord e Twitter</h3>
     <h3 style="margin-bottom: 30px;">Nel dubbio questa è la mia email: <a class="b" href="https://mail.google.com/mail/u/0/#inbox?compose=new">alessiodeleonardis0212@gmail.com</a></h3>
 
     <script>
