--- a/DCvideos/DCSHG.html
+++ b/DCvideos/DCSHG.html
@@ -55,6 +55,8 @@
             <a class="a" href="S1Ep18.html"> 1x18 - Amiche nemiche</a></li> <br>
             <a class="a" href="S1Ep19.html"> 1x19 - Il litigio - parte 1</a></li> <br>
             <a class="a" href="S1Ep20.html"> 1x20 - Il litigio - parte 2</a></li> <br>
+            <br>
+            <h2>PER ORA IL SITO SI FERMA ALL'EPISODIO 20</h2>
             <a class="a" href="S1Ep21.html"> 1x21 - Karen alla riscossa</a></li> <br>
             <a class="a" href="S1Ep22.html"> 1x22 - Il burrito Bucket</a></li> <br>
             <a class="a" href="S1Ep23.html"> 1x23 - Il gatto furioso</a></li> <br>
