--- a/DCvideos/S1Ep8.html
+++ b/DCvideos/S1Ep8.html
@@ -6,18 +6,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="DC.png">
-    <title>S1Ep3</title>
+    <title>S1Ep8</title>
     <meta name="title" content="Sito web ufficiale di Rufus ufficiale di Rufus">
-    <meta name="description" content="Stagione 1 Episodio 3">
+    <meta name="description" content="Stagione 1 Episodio 8">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
-                <h1>Nuove amicizie - parte 3</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6693914741339" frameborder="0"
+                <h1>La Lanterna Viola</h1>
+                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6699131013723" frameborder="0"
                         allowfullscreen></iframe>
-                <h1><a class="a" href="S1Ep4.html">1x04 - Nuove amicizie - parte 4</a></h1>
+                <h1><a class="a" href="S1Ep9.html">1x09 - La rivincita di Kara</a></h1>
 </body>
 
 </html>
