--- a/rufus.html
+++ b/rufus.html
@@ -16,14 +16,11 @@
 </head>
 
 <body>
-        <a href="https://discord.com/users/658968248594989058" style="margin-bottom: 30px;";>
-            <img class="discord-widget" src="https://discord.c99.nl/widget/theme-4/658968248594989058.png" alt="Discord">
-        </a>
-
-
         <h1 style="margin-bottom: 7px;"><a class="b" href="index.html">PAGINA PRINCIPALE</a></h1>
 
         <h1  style="margin-bottom: 10px;">Approfondimenti su mitico Rufus</h1>
+        <h3>Questa pagina è necessario poiché potreste imbattervi in un Rufus in una grande varietà di forme e dimesioni!</h3>
+        <h3>Vi guiderò alla scoperta di questa mistica creatura:</h3>
         <h3  style="margin-bottom: 5px;">queste sono le mie pfp più comuni che cambio in base al periodo</h3>
         <h6  style="margin-bottom: 15px;">(Discord e' un caso a parte)</h6>
         <img class="pfp" style="margin-bottom: 15px;" src="Image.Videos/Starly.png" alt="Starlight">
@@ -87,26 +84,10 @@
 
         <h3 style="margin-bottom: 15px;">Ci sarebbe ancora molto da dire... se avete voglia siete liberi di chiedere su Discord</h3>
 
+        <a href="https://discord.com/users/658968248594989058" style="margin-bottom: 30px;";>
+            <img class="discord-widget" src="https://discord.c99.nl/widget/theme-4/658968248594989058.png" alt="Discord">
+        </a>
 
-
-        <div id="social-icons" class="social-icons">
-            <a href="https://www.pinterest.it/ltrufus/"> <img class="logo" src="Rufus logos/Rufus Pinterest.png" alt="Pinterest"> </a>
-            <a href="https://www.youtube.com/channel/UCTibWCGsj4U4lxBC4KPm-Gw"> <img class="logo" src="Rufus logos/Rufus Youtube.png" alt="Youtube"></a>          
-            <a href="https://www.reddit.com/user/S3Npai-Rufus"> <img class="logo" src="Rufus logos/Rufus Reddit.png" alt="Reddit"></a>
-            <a href="https://soundcloud.com/yaufus"> <img class="logo" src="Rufus logos/Rufus Soundcloud.png" alt="Soundcloud"></a>
-            <a href="https://www.wattpad.com/user/LtRufus"> <img class="logo" src="Rufus logos/Rufus Wattpad.png" alt="Wattpad"></a>
-            <a href="https://www.deviantart.com/rufus7734"> <img class="logo" src="Rufus logos/Rufus Deviantart.png" alt="Deviantart"></a>
-            <a href="https://open.spotify.com/user/rufus_akashi"> <img class="logo" src="Rufus logos/Rufus Spotify.png" alt="Spotify"></a>
-            <a href="https://whatsapp.com/channel/0029VaK4Bbc5Ejy2vDnOHU0R"> <img class="logo" src="Rufus logos/Rufus Whatsapp.png" alt="Whatsapp"></a>
-            <a href="https://t.me/ltrufus"> <img class="logo" src="Rufus logos/Rufus Telegram.png" alt="Telegram"></a>
-            <a href="https://www.instagram.com/lt.rufus/"> <img class="logo" src="Rufus logos/Rufus Instagram.png" alt="Instagram"></a>
-            <a href="https://discord.gg/QygjfvxfZ8"> <img class="logo" src="Rufus logos/Rufus Discord.png" alt="Discord"></a>
-            <a href="https://steamcommunity.com/id/LtRufus/"> <img class="logo" src="Rufus logos/Rufus Steam.png" alt="Steam"></a>
-            <a href="https://www.tiktok.com/@ltrufus"> <img class="logo" src="Rufus logos/Rufus TikTok.png" alt="TikTok"></a>
-            <a href="https://twitter.com/lt_rufus_"> <img class="logo" src="Rufus logos/Rufus Twitter.png" alt="Twitter"></a>
-            <a href="https://github.com/Ru-fus"> <img class="logo" src="Rufus logos/Rufus Github.png" alt="GitHub"></a>
-        </div>
-        <h3><h3 style="margin-bottom: 30px";>Nel dubbio questa e' la mia email: <a class="a" href="https://mail.google.com/mail/u/0/#inbox?compose=new">alessiodeleonardis0212@gmail.com</a></h3></h3>
     </ul>
 
 </body>
