--- a/DCvideos/DCSHG.html
+++ b/DCvideos/DCSHG.html
@@ -11,7 +11,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
+  
 <body>
+
+
+
+
+
         <a href="https://discord.com/users/658968248594989058" style="margin-bottom: 30px";>
             <img class="discord-widget" src="https://discord.c99.nl/widget/theme-4/658968248594989058.png" alt="Discord">
         </a>
@@ -55,8 +61,6 @@
             <a class="a" href="S1Ep18.html"> 1x18 - Amiche nemiche</a></li> <br>
             <a class="a" href="S1Ep19.html"> 1x19 - Il litigio - parte 1</a></li> <br>
             <a class="a" href="S1Ep20.html"> 1x20 - Il litigio - parte 2</a></li> <br>
-            <br>
-            <h2>PER ORA IL SITO SI FERMA ALL'EPISODIO 20</h2>
             <a class="a" href="S1Ep21.html"> 1x21 - Karen alla riscossa</a></li> <br>
             <a class="a" href="S1Ep22.html"> 1x22 - Il burrito Bucket</a></li> <br>
             <a class="a" href="S1Ep23.html"> 1x23 - Il gatto furioso</a></li> <br>
@@ -136,6 +140,11 @@
     </video>
     
         <h1>HANK</h1>
+
+
+
+
+      </script>
 </body>
 
 </html>
