--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
     <div class="centered-box">
         <h1>CHI (O COSA) E' RUFUS?</h1>
         <p>Piacere, io sono <a class="b" href="rufus.html">Rufus</a>, un ragazzo dell'Abruzzo che ha sviluppato questo sito web per noia. Lo scopo principale è condividere i miei progetti ed interessi con chi ne è interessato e dare un punto di riferimento per tutti i miei <a href="#social-icons" class="scroll-to-social">social</a>.</p>
-        <p>Per qualsiasi domanda contattatemi <3 </p>
+        <p>Per qualsiasi domanda contattatemi 🤍 </p>
     </div>
-
 
     <h1 style="margin-bottom: 5px;">PROGETTI</h1>
     <h3>in questa sezione verranno esposti tutti progetti realizzati dal mitico Rufus</h3>
