--- a/DCvideos/DCSHG.html
+++ b/DCvideos/DCSHG.html
@@ -25,6 +25,10 @@
     </h3>
     <h3 style="margin-bottom: 100px;"><a class="c" href="DMCA.html">DMCA/REMOVAL - TAKEDOWN - C&D CLICK HERE</a></h3>
 
+
+    <big> <big> <big> <h1> CHE BASTARDI LO AVETE STECCATO DAVVERO</h1></big></big></big>
+    <h1>In fondo alla pagina c'è comunque il download di tutta la serie</h1>
+
     <h3><a class="a" href="Intro.html">DC Super Hero Girls (2019) - Sigla ITA </a></h3>
 
     <h1 style="margin-top: 35px; margin-bottom: 35px;">1* Stagione:</h1>
