--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
         <img class="dc" src="Image.Videos/DC.png" alt="DC streaming">
     </a>
     <h3 style="margin-bottom: 50px;">A causa del copyright lo streaming è specchiato, tuttavia per chiunque volesse ho lasciato il link per il download di tutta la serie</h3>
-
+    
+    <a href="mc.html">
+        <img class="dc" src="Image.Videos/mc/mc.png" alt="Minecraft">
+    </a>
+    <h2 style="margin-bottom: 50px;">Download Texture di Minecraft</h2>
+    
     <div id="social-icons" class="social-icons">
         <a href="https://www.pinterest.it/ltrufus/"> <img class="logo" src="Rufus logos/Rufus Pinterest.png" alt="Pinterest"> </a>
         <a href="https://www.youtube.com/channel/UCTibWCGsj4U4lxBC4KPm-Gw"> <img class="logo" src="Rufus logos/Rufus Youtube.png" alt="Youtube"></a>          
@@ -74,3 +79,5 @@
     </script>
 </body>
 </html>
+
+
