--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
 		<a href="mc.html">
 			<img class="dc" src="Image.Videos/mc/mc.png" alt="Minecraft" />
 		</a>
-		<h2 style="margin-bottom: 50px">Download Texture di Minecraft</h2>
+		<h2 class="glowLink" style="margin-bottom: 50px">
+			Download Texture di Minecraft
+		</h2>
 
 		<div id="social-icons" class="social-icons">
 			<a href="https://www.pinterest.it/ltrufus/">
@@ -158,7 +160,7 @@
 			/></a>
 		</div>
 
-		<h3 style="margin-bottom: 30px; margin-top: 30px">
+		<h3 class="hidden" style="margin-bottom: 30px; margin-top: 30px">
 			Di questi uso principalmente Discord e Twitter
 		</h3>
 		<h3 class="hidden" style="margin-bottom: 30px">
@@ -169,6 +171,8 @@
 				>alessiodeleonardis0212@gmail.com</a
 			>
 		</h3>
+
+
 
 		<script>
 			document.addEventListener("DOMContentLoaded", function () {
