--- a/rufus.html
+++ b/rufus.html
@@ -79,12 +79,11 @@
             
         </table>
 
-        <h3 style="margin-bottom: 15px;">Ci sarebbe ancora molto da dire... se avete voglia siete liberi di chiedere su Discord</h3>
+        <h3 class="hidden" style="margin-bottom: 15px;">Ci sarebbe ancora molto da dire... se avete voglia siete liberi di chiedere su Discord</h3>
 
-        <a href="https://discord.com/users/658968248594989058" style="margin-bottom: 30px;";>
+        <a class="hidden" href="https://discord.com/users/658968248594989058" style="margin-bottom: 30px;";>
             <img class="discord-widget" src="https://discord.c99.nl/widget/theme-4/658968248594989058.png" alt="Discord">
         </a>
-
     </ul>
         
 
