--- a/DCvideos/DCSHG.html
+++ b/DCvideos/DCSHG.html
@@ -26,8 +26,8 @@
     <h3 style="margin-bottom: 100px;"><a class="c" href="DMCA.html">DMCA/REMOVAL - TAKEDOWN - C&D CLICK HERE</a></h3>
 
 
-    <big> <big> <big> <h1> CHE BASTARDI LO AVETE STECCATO DAVVERO</h1></big></big></big>
-    <h1>In fondo alla pagina c'è comunque il download di tutta la serie</h1>
+    <h1 class= "a" style=" margin-top: 35px; margin-bottom: 35px;"> Proprio per copyright molti (la maggior parte) degli episodi sono stati rimossi ma non temete: a fine pagina c'è il download di tutta la serie!</h1>
+
 
     <h3><a class="a" href="Intro.html">DC Super Hero Girls (2019) - Sigla ITA </a></h3>
 
@@ -122,9 +122,6 @@
     <h3><a class="a" style="margin-bottom: 3px;" href="https://drive.google.com/file/d/13AJFijWHfoxvs_WtHVTda0LA0vulg3FQ/view?usp=sharing"> STAGIONE 1</a></h3>
     <h3><a class="a" style="margin-bottom: 50px;" href="https://drive.google.com/file/d/1tJLn9GbEGwOPyJgqDNQ-Nz-lHvaNHBdD/view?usp=drive_link"> STAGIONE 2</a></h3>
 
-    <video style="margin-bottom: 10px;" width="70%" max-width="600">
-        <source src="Hank.mp4" type="video/mp4">
-    </video>
-    <h1 style="margin-bottom: 25px;">HANK!</h1>
+
 </body>
 </html>
