--- a/rufus.html
+++ b/rufus.html
@@ -23,6 +23,7 @@
         <h3>Vi guiderò alla scoperta di questa mistica creatura:</h3>
         <h3  style="margin-bottom: 5px;">queste sono le mie pfp più comuni che cambio in base al periodo</h3>
         <h6  style="margin-bottom: 15px;">(Discord e' un caso a parte)</h6>
+        <img class="pfp" style="margin-bottom: 15px;" src="Image.Videos/Nebula.png" alt="Nebula">
         <img class="pfp" style="margin-bottom: 15px;" src="Image.Videos/Starly.png" alt="Starlight">
         <img class="pfp" style="margin-bottom: 15px;" src="Image.Videos/Kara.jpg" alt="Supergirl">
         <img class="pfp" style="margin-bottom: 15px;" src="Image.Videos/Peridot.jpg" alt="Peridot">
@@ -54,7 +55,7 @@
             <tr>
                 <td class="question">Razza di cane preferita?</td>
                 <td class="answer">Komondor:<br> <br>
-                    <img class="dog" style="margin-bottom: 15px;" src="Image.Videos/Komondor.png" alt="Doggo"></td>
+                    <img class="rufusimg" style="margin-bottom: 15px;" src="Image.Videos/Komondor.png" alt="Doggo"></td>
             </tr>
             <tr>
                 <td class="question">Estathe limone o pesca?</td>
@@ -66,7 +67,7 @@
             </tr>
             <tr>
                 <td class="question">Interessi?</td>
-                <td class="answer">Giochi di carte di vario tipo <br> <br> <img class="dog" style="margin-bottom: 15px;" src="Image.Videos/MinaAZeroZioPera.png" alt="Mina"><br> L'importante e' essere il piu' tossico possibile su ognuno di essi. <br>"SpazioVuoto" su DuelingBook</td>
+                <td class="answer">Giochi di carte di vario tipo <br> <br> <img class="rufusimg" style="margin-bottom: 15px;" src="Image.Videos/MinaAZeroZioPera.png" alt="Mina"><br> L'importante e' essere il piu' tossico possibile su ognuno di essi. <br>"SpazioVuoto" su DuelingBook</td>
             </tr>
             <tr>
                 <td class="question">Pratichi qualche strumento?</td>
@@ -76,6 +77,11 @@
                 <td class="question">Fiore prerito?</td>
                 <td class="answer">Glicine</td>
             </tr>
+
+            <tr>
+                <td class="question">Pokemon preferito?</td>
+                <td class="answer">Mawile <br> <br> <img class="rufusimg" style="margin-bottom: 15px;" src="Image.Videos/Mawile.png" alt="Mawile"> <br> (Al secondo posto Psyduck)  </td> 
+            </tr>
             
         </table>
 
@@ -84,6 +90,7 @@
         <a href="https://discord.com/users/658968248594989058" style="margin-bottom: 30px;";>
             <img class="discord-widget" src="https://discord.c99.nl/widget/theme-4/658968248594989058.png" alt="Discord">
         </a>
+
     </ul>
         
 
