--- a/index.html
+++ b/index.html
@@ -14,17 +14,32 @@
             text-align: center;
         }
     </style>
+    	<script defer src="script.js"></script>
 </head>
 
 <body>
-    <a href="https://discord.com/users/658968248594989058" style="margin-bottom: 45px;">
-        <img class="discord-widget" src="https://discord.c99.nl/widget/theme-4/658968248594989058.png" alt="Discord">
+    <a
+    href="https://discord.com/users/658968248594989058"
+    style="margin-bottom: 45px"
+    >
+    <img
+        class="discord-widget"
+        src="https://discord.c99.nl/widget/theme-4/658968248594989058.png"
+        alt="Discord"
+    />
     </a>
 
-    <div class="centered-box">
+    <div class="centered-box hidden">
         <h1>CHI (O COSA) E' RUFUS?</h1>
-        <p>Piacere, io sono <a class="b" href="rufus.html">Rufus</a>, un ragazzo dell'Abruzzo che ha sviluppato questo sito web per noia. Lo scopo principale è condividere i miei progetti ed interessi con chi ne è interessato e dare un punto di riferimento per tutti i miei <a href="#social-icons" class="scroll-to-social">social</a>.</p>
-        <p>Per qualsiasi domanda contattatemi 🤍 </p>
+        <p>
+            Piacere, io sono <a class="b" href="rufus.html">Rufus</a>, un
+            ragazzo dell'Abruzzo che ha sviluppato questo sito web per noia.
+            Lo scopo principale è condividere i miei progetti ed interessi
+            con chi ne è interessato e dare un punto di riferimento per
+            tutti i miei
+            <a href="#social-icons" class="scroll-to-social">social</a>.
+        </p>
+        <p>Per qualsiasi domanda contattatemi 🤍</p>
     </div>
 
     <h1 style="margin-bottom: 5px;">PROGETTI</h1>
@@ -60,7 +75,14 @@
     </div>
 
     <h3 style="margin-bottom: 30px; margin-top: 30px;">Di questi uso principalmente Discord e Twitter</h3>
-    <h3 style="margin-bottom: 30px;">Nel dubbio questa è la mia email: <a class="b" href="https://mail.google.com/mail/u/0/#inbox?compose=new">alessiodeleonardis0212@gmail.com</a></h3>
+    		<h3 class="hidden" style="margin-bottom: 30px">
+			Nel dubbio questa è la mia email:
+			<a
+				class="b"
+				href="https://mail.google.com/mail/u/0/#inbox?compose=new"
+				>alessiodeleonardis0212@gmail.com</a
+			>
+		</h3>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
