--- a/mc.html
+++ b/mc.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="Image.Videos/mc/mc.png">
     <title> Minecraft Texture</title>
     <meta name="title" content="Sito web ufficiale di Rufus ufficiale di Rufus">
-    <meta name="description" content="Dowload della Texture di Minecraft creata da mitico Rufus">
+    <meta name="description" content="Dowload della Texture di Minecraft creata dal mitico Rufus">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
